# SmartErrorNotebook

./: .gitignore  .prettierignore  LICENSE  README.md  USAGE.html  package-lock.json  package.json  pnpm-lock.yaml  sync.md  vite.config.ts
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  SRS_ALGORITHM.md  SYNC_PROTOCOL.md  USER_GUIDE.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: attachment.rs  error_question.rs  error_tag.rs  export.rs  greeting.rs  mod.rs  source.rs  srs_data.rs  subject.rs  sync.rs  user_config.rs
src-tauri/src/database/: connection.rs  mod.rs
src-tauri/src/database/entities/: attachment.rs  error_question.rs  error_tag.rs  mod.rs  prelude.rs  source.rs  srs_data.rs  subject.rs  user_config.rs
src-tauri/src/database/migrations/: m20250117_000001_create_user_config.rs  m20250117_000002_create_subjects.rs  m20250117_000003_create_error_questions.rs  m20250117_000004_create_srs_data.rs  m20250117_000005_create_sources.rs  m20250117_000006_create_error_tags.rs  m20250117_000007_create_attachments.rs  m20250130_000002_recreate_sources.rs  m20250130_000003_alter_attachments_base64.rs  m20250206_000001_add_sourceid_to_error_questions.rs  m20260428_000005_alter_srs_data_sdr_model.rs  m20260512_000001_alter_attachments_base64_to_blob.rs  m20260512_000002_alter_errorquestion_prompt_to_text.rs  m20260516_000001_remove_foreign_keys.rs  m20260521_000003_add_deleted_at_to_srs_data.rs  mod.rs
src-tauri/src/srs/: mod.rs
(+88 files in other folders)
