[package]
name = "smarterrornotebook"
version = "0.1.1"
description = "smarterrornotebook"
authors = ["zpb911km", "fly-960452909", "dimixun", "BakeReisen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "smarterrornotebook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 数据库相关
sea-orm = { version = "1.0", features = ["sqlx-mysql", "sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.0"

# 工具库
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
dirs = "5"
tauri-plugin-fs = "2"

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true # 启用链接时优化。
opt-level = "s" # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort" # 通过禁用 panic 处理程序来提高性能。
strip = true # 确保移除调试符号。
